# japandict

./: .gitignore  BUILD.md  Cargo.toml  Dioxus.toml  Makefile
.github/workflows/: deploy.yml
assets/: main.css
dictionary-data/: Cargo.toml
dictionary-data/src/: lib.rs.template
japandict-core/: Cargo.toml
japandict-core/src/: dictionary.rs  lib.rs  search.rs
japandict-tui/: Cargo.toml
japandict-tui/src/: main.rs
japandict-web/: Cargo.toml  Dioxus.toml  test.html
japandict-web/assets/: style.css  styles.css
japandict-web/src/: main.rs
jmdict-codegen/: .gitignore  Cargo.toml
jmdict-codegen/src/: lib.rs  main.rs
src/: main.rs
