[workspace]
resolver = "2"
members = [
    "japandict-core",
    "japandict-tui", 
    "japandict-web",
    "jmdict-codegen",
]

# Exclude heavy dictionary data from normal workspace builds
exclude = [
    "dictionary-data",
]

[workspace.dependencies]
dictionary-data = { path = "dictionary-data" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# Compact profile for dictionary data to reduce intermediate files
[profile.dict]
inherits = "dev"
opt-level = 0
debug = false
incremental = false
